changed the way animation completes using top and bottom css properties. fixes alignment for decimal font sizes

--- a/dev-app/src/app/main/main.css
+++ b/dev-app/src/app/main/main.css
@@ -3,5 +3,6 @@
 }
 
 .roll-style {
-  font-size: 30px;
+  font-size: 41.32px;
+  font-family: "Lucida Sans Unicode"
 }
